# Altaron

./: LICENSE  README.md  pyproject.toml
altaron/: __init__.py
altaron/backtest/: __init__.py  __walk_forward.py
altaron/base/: __backtest.py  __base.py  __data_processor.py  __feature_extractor.py  __init__.py  __strategy.py  __trading_model.py
altaron/data/: __binance.py  __init__.py
altaron/feature_extraction/: __indicators.py  __init__.py  _entropy.py  _micro_structural.py  _structural.py  _structural_break.py
altaron/models/: __cart_models.py  __init__.py
altaron/mpengine/: __init__.py  __job_preparation.py  __processing.py
altaron/utils/: __init__.py  vis.py
qntml/: __init__.py
qntml/base/: __data_holder.py  __data_processor.py  __feature_extractor.py  __init__.py  __q_class.py
qntml/feature_extraction/: __init__.py  _entropy.py  _structural.py  _time_series.py
qntml/utils/: vis.py
